# life_game_wasm

./: .eslintrc.json  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  mise.toml  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  pr-auto-approve.yaml
js/: index.js
src/: config.rs  constants.rs  creator.rs  error.rs  field.rs  index.ts  lib.rs  player.rs  renderer.rs  rules.rs
src/config/: config.yaml  test.yaml
src/creator/: creator_trait.rs  table_creator.rs
src/rules/: rule_trait.rs  standard_rule.rs  tests.rs
static/: index.html
tests/: integration_test.rs  wasm.rs
